--- a/test.html
+++ b/test.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head></head>
+	<title>test page</title>
+</head>
+<body></body>
 <h1>Jefferey Epstein didn't kill himself. </h1>
-<p> Why were the guards sent away an hour before his supposed suicide? </p>
+<p> Why were the <b>guards</b> sent away an hour before his supposed suicide? </p>
 <a href="https://google.com" target="_blank" title="C'mon, don't be a little bitch <3"> Don't you want to be a sheep?</a>
+<p>My name is <br> <b>Jeff</b>.</p>
+<img src="img/jeff.png">
+</html>
