--- a/test.html
+++ b/test.html
@@ -4,9 +4,9 @@
 	<title>test page</title>
 </head>
 <body></body>
-<h1>Jefferey Epstein didn't kill himself. </h1>
-<p> Why were the <b>guards</b> sent away an hour before his supposed suicide? </p>
-<a href="https://google.com" target="_blank" title="C'mon, don't be a little bitch <3"> Don't you want to be a sheep?</a>
-<p>My name is <br> <b>Jeff</b>.</p>
-<img src="img/jeff.png">
+<h1>Our Special Rock. </h1>
+<p> Where do I go when I <b>NEED</b> to get away? </p>
+<a href="https://google.com" target="_blank" title="C'mon, don't be a little bitch <3"> Heeeeeere's Google!</a>
+<p>My name is <br>Mr. Toad <br><b>and I'm</b> <br> Mr. Frog.</p>
+<img src="img/frog.jpg">
 </html>
