wrote the css and changed some html for the index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Killua Zoldyck</title>
 	<link rel="icon" href="img/killua.jpg">
+	<link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!--header elements-->
@@ -17,7 +19,7 @@
 		</h2>
 		<p>Killua Zoldyck was born into the esteemed Zoldyck family as assasins, and ultimately chose to leave that life in order to stay with his best friend Gon. A true Gemini indeed, he can steal your heart in two ways: with his cuteness or his hand.</p>
 		<img src="img/killua-scary.png">
-		<p> Killua when he doesn't get to play with Gon </p>
+		<p class="caption"> Killua when he doesn't get to play with Gon </p>
 		<!-- Characteristics -->
 		<h2>Killua's Characteristics</h2>
 		<ol>
